# snellbaas

./: Cargo.toml  README.md  docker-compose.yml
auth/: Cargo.toml
auth/src/: lib.rs
auth/src/database/: mod.rs
auth/src/models/: users.rs
auth/src/services/: mod.rs  users.rs
console/: .env  Cargo.toml
console/src/: main.rs
console/src/controllers/: console.rs  mod.rs
console/src/controllers/auth/: login.rs  mod.rs  profile.rs  registration.rs  users.rs
console/src/controllers/projects/: mod.rs  read.rs  write.rs
console/src/controllers/projects/services/: auth_service.rs  mod.rs  mongodb_service.rs
console/src/database/: mod.rs
console/src/models/: project.rs
console/src/services/: mod.rs  project_auth.rs  project_mongodb.rs  projects.rs
console/web/: package.json  svelte.config.js  tailwind.config.cjs
console/web/src/: app.css  app.html
console/web/src/lib/: Footer.svelte  Header.svelte
console/web/src/lib/api/: auth.ts  client.ts  mongodb.ts  projects.ts
console/web/src/lib/components/: JSONEditor.svelte
console/web/src/lib/models/: id.ts  mongodb.ts  project.ts  user.ts
console/web/src/lib/stores/: auth.ts  projects.ts
console/web/src/lib/utils/: local_storage.ts  stores.ts
console/web/src/routes/: __layout.svelte  index.svelte
console/web/src/routes/auth/: login.svelte  register.svelte
console/web/src/routes/user/projects/: index.svelte  new.svelte
console/web/src/routes/user/projects/[project_id]/: __layout.svelte  index.svelte
console/web/src/routes/user/projects/[project_id]/mongodb/: __layout.svelte  index.svelte  (+1 more)
(+9 files in other folders)
