[package]
name = "auth"
version = "0.1.0"
authors = ["Salemmous <thomas.debluts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
validator = { version = "0.14", features = ["derive"] }
actix-web-validator = "2.1.1"
jsonwebtoken = "7"
serde = { version = "1.0.130", features = ["derive"] }
mongodb = "2.0.0"
futures = "0.3.17"
error = { path = "../error" }
regex = "1.5.4"
bcrypt = "0.10.1"
chrono = "0.4.19"


[dev-dependencies]
tokio = "1.12.0"