[package]
name = "console"
version = "0.1.0"
authors = ["Salemmous <thomas.debluts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
dotenv = "0.15.0"
actix-web-validator = "2.1.1"
validator = { version = "0.14", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
error = { path = "../error" }
auth = { path = "../auth" }
env_logger = "0.9.0"
mongodb = "2.0.0"
futures = "0.3.17"
actix-files = "0.6.0-beta.7"
actix-cors = "0.6.0-beta.2"
jsonwebtoken = "7"

[dev-dependencies]
actix-rt =  "2.2.0"